--- a/src/App.css
+++ b/src/App.css
@@ -194,5 +194,8 @@ input{
   .food-container{
     background:#cfd9e2
   }
+/* .checkout-container{
+  background-image: url(/checkoutImage/checkout.jpeg)
+}
 
-  
+   */
